--- a/index.html
+++ b/index.html
@@ -5,90 +5,103 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="assets\css\style.css" />
+    <title>Cory Styer // Future Web Dev Portfolio</title>
+    <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 
 <body>
     <header>
         <h1>Cory Styer Portfolio!!</h1>
         <nav>
-            <a>| About Me |</a>
-            <a>| Work / Projects |</a>
-            <a>| Contact Info |</a>
+            <a href="#About Me">| About Me |</a>
+            <a href="#Work / Projects">| Work / Projects |</a>
+            <a href="#Contact Info">| Contact Info |</a>
         </nav>
     </header>
 
-    <section>
-        <h2>"Insperational Quote Text"</h2>
+    <section class="banner">
+        <h2>"If fighting could provide us with the truth, nobody would make any mistakes in their lives. A person's life
+            is not that easy. The truth you must learn from yourself, from how you live your life." -Kenshin Himura</h2>
     </section>
 
-    <main>
-    <section id="About Me">
-        <h2>About Me</h2>
-        <p>weiuahf iuahfiu ahefi uhWIUEF Hiwuhe fiouwhf eiuwhfeijuheFI
-            WKJEFNIWjjfe ijJFIJ JfijJN IFJJf ijjn IJFN
-            IKJWEHN FIUEWH FEIUHNW FIJHN ifjnI FNiojjnfe ijEJNF I
-        </p>
-        <P>
-            IWEJFH IUWHFE IUHwf ijnkjvcd nAKJF NIJUW HFIJnhf iwejkfhjni
+    <main class="info-section">
+        <!--About me section-->
+        <section class="page-section" id="About Me">
+            <h2>About Me</h2>
+            <p>
+                She'd forth, there appear. Fourth firmament female you're there moved. Is Herb. Which Rule and. Over unto
+                air. One together also bearing made, shall fruit had. Signs won't beginning let. That behold abundantly
+                beginning saw. From.
 
-            oiwkesafj ioJF OIJf okmjO FKEMolkf vmokLMF okmjO
+                Form fill first seasons that. Together divide night hath air creature without stars Was two behold fruit
+                appear stars fruitful also seas doesn't stars multiply fruitful the darkness male spirit said fly which
+                under were creepeth him.
 
-            OKWEEFJ OIjf oiJWF OIJwf oijWOIF Jwoif ejOIFJE wofe jOIWF Jws
-        </P>
-    </section>
+                Green Itself upon moved also that spirit light beginning. One blessed lights given be tree unto unto
+                morning bring day doesn't good he creature had herb unto.
+            </p>
+            <P>
+                Unto man cattle moveth. Open, behold. Green. Beast greater. Moved all set dry together face, without
+                hath under, saw lesser seasons. Fowl fourth dry hath make without hath cattle he she'd you're it.
 
-    <section id="Work / Projects">
-        <h2>Work / Projects</h2>
-        <div>
-            <a class="coming-soon">
-                <h3>Coming Soon!</h3>
+                Herb replenish abundantly said so, air. Were won't years. So face divided may void was creepeth second
+                own shall from have air saw can't man them dry to let without may Stars doesn't seas us isn't. Made
+                beast green called won't. Of be.
+
+                Replenish divide behold thing, fly heaven fill you're of man in i us spirit i day. Them great creeping
+                they're, land fifth first was.
+            </P>
+        </section>
+
+        <section class="page-section" id="Work / Projects">
+            <h2>Work / Projects</h2>
+            <div class="flex-container">
+                <a href="#" class="flex-item coming-soon">
+                    <h3>Coming Soon!</h3>
+                </a>
+            </div>
+        </section>
+
+        <a href="#" class="flex-item sorry-come-back-later">
+            <div>
+                <h3>Sorry, come back later!</h3>
                 <span>Look forward to it</span>
-            </a>
-        </div>
-    </section>
+            </div>
+        </a>
 
-    <a class="sorry-come-back-later">
-        <div>
-            <h3>Sorry, come back later!</h3>
-            <span>Look forward to it</span>
-        </div>
-    </a>
+        <a href="#" class="flex-item eventually">
+            <div>
+                <h3>Eventually it'll get there!</h3>
+                <span>Look forward to it</span>
+            </div>
+        </a>
 
-    <a class="eventually">
-        <div>
-            <h3>Eventually it'll get there!</h3>
-            <span>Look forward to it</span>
-        </div>
-    </a>
+        <a href="#" class="flex-item my-project-here">
+            <div>
+                <h3>My project here!</h3>
+                <span>Look forward to it</span>
+            </div>
+        </a>
 
-    <a class="my-project-here">
-        <div>
-            <h3>My project here!</h3>
-            <span>Look forward to it</span>
-        </div>
-    </a>
+        <a href="#" class="flex-item project-space">
+            <div>
+                <h3>"Your Project Space Here!!"</h3>
+                <span>Sounds like a broken record by now...</span>
+            </div>
+        </a>
 
-    <a class="project-space">
-        <div>
-            <h3>"Your Project Space Here!!"</h3>
-            <span>Sounds like a broken record by now...</span>
-        </div>
-    </a>
-
-    <section id="Contact Info">
-        <h2>Contact Info</h2>
-        <div>
-            <adress>
-                <a>520.307.6484</a>
-                <a>stylesthestyer@gmail.com</a>
-                <a>Github</a>
-                <a>Instagram</a>
-                <a>Spotify</a>
-            </adress>
-        </div>
-    </section>
+        <section class="page-section contact" id="contact info">
+            <h2>Contact Info</h2>
+            <div>
+                <address>
+                    <a href="tel:+13076484">520.307.6484</a>
+                    <a href="mailto:stylesthestyer@gmail.com">stylesthestyer@gmail.com</a>
+                    <a href="https://github.com/MacaroniKetchup">Github</a>
+                    <a href="https://www.instagram.com/styles_styer/">Instagram</a>
+                    <a href="https://open.spotify.com/user/macaroniketchup?si=e6ef62d6e0d14797">Spotify</a>
+                </address>
+            </div>
+        </section>
     </main>
 </body>
 
