slight edits to style sheet as also added a PFP to protfolio

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <header>
         <h1>Cory Styer Portfolio!!</h1>
+        <img src="assets/images/profile-pic.jpg" alt="Profile Picture / Avatar">
         <nav>
             <a href="#About Me">| About Me |</a>
             <a href="#Work / Projects">| Work / Projects |</a>
@@ -94,7 +95,7 @@
             <h2>Contact Info</h2>
             <div>
                 <address>
-                    <a href="tel:+13076484">520.307.6484</a>
+                    <a href="tel:+15555550123">555.555.0123</a>
                     <a href="mailto:stylesthestyer@gmail.com">stylesthestyer@gmail.com</a>
                     <a href="https://github.com/MacaroniKetchup">Github</a>
                     <a href="https://www.instagram.com/styles_styer/">Instagram</a>
