added first project to the portfolio!

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         <section class="page-section" id="Work / Projects">
             <h2>Work / Projects</h2>
             <div class="flex-container">
-                <a href="#" class="flex-item coming-soon">
-                    <h3>Coming Soon!</h3>
+                <a href="https://macaroniketchup.github.io/Webdev-Remote-Job-Search-App/" class="flex-item coming-soon">
+                    <h3>Web Dev Remote Job Search & Some Shibes</h3>
                 </a>
             </div>
         </section>
