adding first project to portfolio

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <h2>Work / Projects</h2>
             <div class="flex-container">
                 <a href="https://macaroniketchup.github.io/Webdev-Remote-Job-Search-App/" class="flex-item coming-soon">
-                    <h3>Web Dev Remote Job Search & Some Shibes</h3>
+                    <h3>Web Dev Remote Job Search & Some Shibes!</h3>
                 </a>
             </div>
         </section>
