Added Second Project

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
             </div>
         </section>
 
-        <a href="#" class="flex-item sorry-come-back-later">
+        <a href="https://github.com/colekasa/Battle-Binder" class="flex-item sorry-come-back-later">
             <div>
-                <h3>Sorry, come back later!</h3>
-                <span>Look forward to it</span>
+                <h3>BATTLE BINDER!</h3>
+                <span>SAVE CARDS AND CREATE YOU DECK TODAY!!</span>
             </div>
         </a>
 
